[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/level_default.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level5/level5.gd" type="Script" id=2]
[ext_resource path="res://levels/level5/wire_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://levels/level5/wires.gd" type="Script" id=4]
[ext_resource path="res://props/builder.tres" type="TileSet" id=5]
[ext_resource path="res://props/builder.gd" type="Script" id=6]
[ext_resource path="res://props/crate/crate.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/level5/electro_brick/electro_brick.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels/level5/sparks/sparkle.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 7.09589 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 6.2843 )

[node name="5" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="geometry" parent="." index="1"]
tile_data = PoolIntArray( 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 327691, 1, 0, 327692, 0, 0, 393234, 0, 0, 524294, 0, 0, 589828, 1, 0, 589842, 0, 0, 589843, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 720901, 0, 0 )

[node name="wires" type="TileMap" parent="." index="2"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 393228, 8, 0, 458760, 10, 0, 458764, 9, 0, 524295, 6, 0, 524297, 4, 0, 524298, 8, 0, 524300, 9, 0, 589831, 9, 0, 589834, 2, 0, 589836, 1, 0, 655367, 1, 0, 655370, 9, 0, 655372, 9, 0, 720903, 9, 0, 720906, 2, 0, 720908, 7, 0, 786437, 6, 0, 786439, 7, 0, 786442, 9, 0, 851973, 5, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 7, 0 )
script = ExtResource( 4 )

[node name="objects" parent="." index="3"]
tile_data = PoolIntArray( 720913, 10, 0 )

[node name="geometry part 2" type="TileMap" parent="." index="4"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 720912, 0, 0, 720914, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0 )
script = ExtResource( 6 )

[node name="crate" parent="." index="5" instance=ExtResource( 7 )]
position = Vector2( 111, 304 )

[node name="crate2" parent="." index="6" instance=ExtResource( 7 )]
position = Vector2( 368, 144 )

[node name="crate3" parent="." index="7" instance=ExtResource( 7 )]
position = Vector2( 496, 112 )

[node name="crate4" parent="." index="8" instance=ExtResource( 7 )]
position = Vector2( 400, 400 )

[node name="player" parent="." index="9" instance=ExtResource( 8 )]
position = Vector2( 32, 288 )

[node name="level_border" parent="." index="11"]
editor/display_folded = true

[node name="electro_brick" parent="." index="12" instance=ExtResource( 9 )]
position = Vector2( 208, 336 )

[node name="electro_brick2" parent="." index="13" instance=ExtResource( 9 )]
position = Vector2( 368, 304 )

[node name="electro_brick3" parent="." index="14" instance=ExtResource( 9 )]
position = Vector2( 368, 208 )

[node name="trigger_zones" type="Area2D" parent="." index="15"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_zones" index="0"]
position = Vector2( 208, 400 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="trigger_zones" index="1"]
position = Vector2( 368, 368 )
shape = SubResource( 2 )

[node name="sparks" type="Node2D" parent="." index="16"]
editor/display_folded = true
visible = false

[node name="sparkle" parent="sparks" index="0" instance=ExtResource( 10 )]
position = Vector2( 400, 208 )
frame = 1

[node name="sparkle2" parent="sparks" index="1" instance=ExtResource( 10 )]
position = Vector2( 400, 240 )
frame = 1

[node name="sparkle3" parent="sparks" index="2" instance=ExtResource( 10 )]
position = Vector2( 400, 272 )

[node name="sparkle4" parent="sparks" index="3" instance=ExtResource( 10 )]
position = Vector2( 400, 304 )

[node name="sparkle5" parent="sparks" index="4" instance=ExtResource( 10 )]
position = Vector2( 400, 336 )

[node name="sparkle6" parent="sparks" index="5" instance=ExtResource( 10 )]
position = Vector2( 400, 368 )
frame = 4

[node name="sparkle7" parent="sparks" index="6" instance=ExtResource( 10 )]
position = Vector2( 336, 368 )
frame = 4

[node name="sparkle8" parent="sparks" index="7" instance=ExtResource( 10 )]
position = Vector2( 336, 336 )
frame = 3

[node name="sparkle9" parent="sparks" index="8" instance=ExtResource( 10 )]
position = Vector2( 336, 304 )
frame = 3

[node name="sparkle15" parent="sparks" index="9" instance=ExtResource( 10 )]
position = Vector2( 336, 272 )
frame = 3

[node name="sparkle10" parent="sparks" index="10" instance=ExtResource( 10 )]
position = Vector2( 304, 272 )
frame = 2

[node name="sparkle11" parent="sparks" index="11" instance=ExtResource( 10 )]
position = Vector2( 240, 272 )
frame = 2

[node name="sparkle12" parent="sparks" index="12" instance=ExtResource( 10 )]
position = Vector2( 240, 304 )
frame = 1

[node name="sparkle13" parent="sparks" index="13" instance=ExtResource( 10 )]
position = Vector2( 240, 336 )
frame = 1

[node name="sparkle14" parent="sparks" index="14" instance=ExtResource( 10 )]
position = Vector2( 240, 368 )
frame = 1

[node name="sparkle16" parent="sparks" index="15" instance=ExtResource( 10 )]
position = Vector2( 240, 400 )

[node name="sparkle17" parent="sparks" index="16" instance=ExtResource( 10 )]
position = Vector2( 176, 400 )

[node name="sparkle18" parent="sparks" index="17" instance=ExtResource( 10 )]
position = Vector2( 176, 432 )
frame = 4

[node name="sparkle19" parent="sparks" index="18" instance=ExtResource( 10 )]
position = Vector2( 208, 432 )
frame = 4

[node name="sparkle20" parent="sparks" index="19" instance=ExtResource( 10 )]
position = Vector2( 240, 432 )
frame = 4

[node name="sparkle21" parent="sparks" index="20" instance=ExtResource( 10 )]
position = Vector2( 272, 432 )
frame = 4

[node name="sparkle22" parent="sparks" index="21" instance=ExtResource( 10 )]
position = Vector2( 304, 432 )
frame = 4

[node name="sparkle23" parent="sparks" index="22" instance=ExtResource( 10 )]
position = Vector2( 336, 432 )
frame = 4

[node name="sparkle24" parent="sparks" index="23" instance=ExtResource( 10 )]
position = Vector2( 336, 400 )
frame = 4
[connection signal="body_entered" from="trigger_zones" to="." method="_on_trigger_zones_body_entered"]
[connection signal="body_exited" from="trigger_zones" to="." method="_on_trigger_zones_body_exited"]
